--- a/studymate/backend/Dockerfile
+++ b/studymate/backend/Dockerfile
@@ -12,38 +12,19 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 WORKDIR /app
 
-COPY pyproject.toml ./
+# Copy dependency files
+COPY pyproject.toml README.md ./
 
+# Install dependencies
 RUN pip install --upgrade pip && \
-    pip install -e .[dev]
+    pip install -e .
 
+# Copy application code
 COPY app ./app
+COPY tests ./tests
 
-EXPOSE 8000
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-
-FROM python:3.11-slim AS base
-
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
-    POETRY_VIRTUALENVS_CREATE=false
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    git \
-    libgomp1 \
-    && rm -rf /var/lib/apt/lists/*
-
-WORKDIR /app
-
-COPY pyproject.toml ./
-
-RUN pip install --upgrade pip && \
-    pip install -e .[dev]
-
-COPY app ./app
+# Create data directory for FAISS index
+RUN mkdir -p /data/faiss
 
 EXPOSE 8000
 
