--- a/studymate/backend/pyproject.toml
+++ b/studymate/backend/pyproject.toml
@@ -6,9 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "studymate-backend"
 version = "0.1.0"
 description = "StudyMate backend services (FastAPI)"
-readme = "../README.md"
+readme = "README.md"
 requires-python = ">=3.11"
-license = { text = "MIT" }
+license = "MIT"
 authors = [
   { name = "StudyMate", email = "dev@studymate.local" }
 ]
@@ -20,6 +20,7 @@ dependencies = [
   "sqlalchemy>=2.0.30",
   "alembic>=1.13.2",
   "psycopg[binary]>=3.1.19",
+  "asyncpg>=0.29.0",
   "boto3>=1.34.130",
   "minio>=7.2.7",
   "python-dotenv>=1.0.1",
@@ -35,7 +36,8 @@ dependencies = [
   "httpx>=0.27.0",
   "redis>=5.0.4",
   "orjson>=3.10.3",
-  "sse-starlette>=2.1.0"
+  "sse-starlette>=2.1.0",
+  "ibm-watsonx-ai>=0.1.0"
 ]
 
 [project.optional-dependencies]
