--- a/studymate/backend/pyproject.toml
+++ b/studymate/backend/pyproject.toml
@@ -37,7 +37,11 @@ dependencies = [
   "redis>=5.0.4",
   "orjson>=3.10.3",
   "sse-starlette>=2.1.0",
-  "ibm-watsonx-ai>=0.1.0"
+  "ibm-watsonx-ai>=0.1.0",
+  "python-multipart>=0.0.6",
+  "python-jose[cryptography]>=3.3.0",
+  "passlib[bcrypt]>=1.7.4",
+  "email-validator>=2.1.0"
 ]
 
 [project.optional-dependencies]
