--- a/studymate/deploy/docker-compose.yml
+++ b/studymate/deploy/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+
 
 services:
   db:
@@ -38,8 +38,6 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile
-    env_file:
-      - ../.env.example
     environment:
       APP_ENV: dev
       POSTGRES_URL: postgresql+psycopg://studymate:studymate@db:5432/studymate
@@ -51,6 +49,10 @@ services:
       EMBEDDINGS_BACKEND: sentence-transformers
       EMBEDDINGS_MODEL: BAAI/bge-small-en-v1.5
       NEXT_PUBLIC_API_BASE: http://localhost:8000
+      # JWT settings
+      JWT_SECRET_KEY: your-secret-key-here-change-in-production
+      JWT_ALGORITHM: HS256
+      JWT_ACCESS_TOKEN_EXPIRE_MINUTES: 30
     depends_on:
       - db
       - minio
